<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_7"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="357dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="326dp"
        android:text="@string/btn7"  android:layout_height="2sp"/>

    <Button
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="358dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="325dp"
        android:text="@string/btn8" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="291dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="324dp"
        android:text="@string/btn9" />

    <Button
        android:id="@+id/btn_opn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="297dp"
        android:layout_marginTop="635dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="48dp"
        android:text="@string/btn_open" />

    <Button
        android:id="@+id/btn_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="637dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="51dp"
        android:text="@string/btn_back" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="635dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="48dp"
        android:text="@string/btn0" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="296dp"
        android:layout_marginTop="538dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="145dp"
        android:text="@string/btn3" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="539dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="147dp"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="539dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="144dp"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="232dp"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="157dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="235dp"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="447dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="236dp"
        android:text="@string/btn4" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="506dp" />

</RelativeLayout>